fix menu flicker

--- a/referenceManager-react/src/index.css
+++ b/referenceManager-react/src/index.css
@@ -3,3 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.ui.menu.fixed {
+    transform: translateZ(0);
+}
